--- a/css/banner.css
+++ b/css/banner.css
@@ -55,6 +55,7 @@
 	top: -40%;
 	left: -5%;
 }
+
 @-webkit-keyframes rotating {
     from{
         -webkit-transform: rotate(0deg);
@@ -88,7 +89,7 @@
     }
 }
 @media all and (min-width: 960px) and (max-width: 1280px) {	
-.banner { font-size: 24px; margin-top: 70px;}
+.banner { font-size: 24px; margin-top: 0;}
 }
 @media all and (max-width: 768px) {	
 .banner { font-size: 30px; margin-top: 20px;}
