--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,7 @@ a.scroll::after {
   font-weight: 100;
   padding-top: 10px;
   padding-bottom: 60px;
-  color: #0099FF;
+  color: black;
   display: block;
 }
 
@@ -738,6 +738,10 @@ a.scroll::after {
   zoom: 1;
   filter: alpha(opacity=100);
   opacity: 1;
+}
+
+.wrap:hover {
+  color: orange;
 }
 
 .phrase-1 {
@@ -963,15 +967,18 @@ canvas {
 
 .iconfullbox {
   position: relative;
-  width: 100%;
+  width: 115%;
+  height: 300px;
 }
 
 .iconfull {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 95%;
+  left: 75%;
   transform: translate(-50%, -50%);
-  color: #FFF;
+  color: white;
+  height: 100%;
+  width: 100%;
 }
 
 h5.title0 {
@@ -1272,7 +1279,7 @@ article img {
   position: absolute;
   left: 50%;
   bottom: 20px;
-  z-index: 50;
+  z-index: 5;
   width: 200px;
   height: 44px;
   opacity: 0.8;
@@ -1335,7 +1342,7 @@ article img {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 5;
   background-color: rgba(157,176,255,0.0);
   -webkit-transition: 1.5s;
   -moz-transition: 1.5s;
@@ -1353,7 +1360,7 @@ article img {
   position: absolute;
   bottom: 63px;
   left: 0;
-  z-index: 200;
+  z-index: 5;
   width: -webkit-calc(50% - 100px);
   width: -moz-calc(50% - 100px);
   width: calc(50% - 100px);
@@ -1452,9 +1459,8 @@ article img {
 }
 
 #graybg {
-  background-color: #569DAA;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  background-color: #FFE194;
+
   border-top-width: 1px;
   border-bottom-width: 1px;
   border-top-style: solid;
@@ -1929,7 +1935,7 @@ ul.blogsocico li.youtube a:hover, #sidebar ul.blogsocico li.youtube a:hover {
 
 .footer {
   background-color: #37324b;
-  padding: 5em;
+  padding: 2em;
 }
 .footer h1 {
   font-family: 'Montserrat', sans-serif;
@@ -2097,12 +2103,13 @@ ul.blogsocico li.youtube a:hover, #sidebar ul.blogsocico li.youtube a:hover {
 .our-team {
   padding: 30px 0 40px;
   margin-bottom: 30px;
-  background-color: #B9EDDD;
+  background-color: #F5F0BB;
   text-align: center;
   overflow: hidden;
   position: relative;
-  width: 100%;
-  height: 500px;
+  width: 90%;
+  height: 350px;
+  margin-left: 5%;
 }
 
 .our-team .picture {
@@ -2239,9 +2246,9 @@ ul.blogsocico li.youtube a:hover, #sidebar ul.blogsocico li.youtube a:hover {
 
 
 .mentor-head {
-  font-family: 'Lobster', cursive;
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
-  font-size: 500%;
+  font-size: 400%;
 }
 
 .name {
@@ -2314,12 +2321,26 @@ ul.blogsocico li.youtube a:hover, #sidebar ul.blogsocico li.youtube a:hover {
 
 /* fade content styles */
 
+.fade-in2 {
+  transform: translateY(50px);
+  transition: opacity 0.8s ease-in, transform 0.7s ease-in;
+  animation: fadeIn 1s ease-in-out forwards;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 .fade-in {
   opacity: 0;
   transform: translateY(50px);
   transition: opacity 0.8s ease-in, transform 0.7s ease-in;
 }
-
 .fade-in.show {
   opacity: 1;
   transform: translateY(40);
@@ -2329,34 +2350,68 @@ ul.blogsocico li.youtube a:hover, #sidebar ul.blogsocico li.youtube a:hover {
   transform: translateY(0);
 }
 
-.sliding-door {
-  position: relative;
-  
-  overflow: hidden;
+/* Media Query for Laptops */
+@media (min-width: 1024px) {
+  .sliding-door {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .left-panel,
+  .right-panel {
+    opacity: 1;
+    transition: transform 0.5s ease-in;
+  }
+
+  .left-panel {
+    opacity: 1;
+    transform: translateX(120%);
+  }
+
+  .right-panel {
+    opacity: 1;
+    transform: translateX(-120%);
+  }
+
+  .show-left {
+    transform: translateX(0);
+  }
+
+  .show-right {
+    transform: translateX(0);
+  }
 }
 
-.left-panel,
-.right-panel {
-  opacity: 1;
-  transition: transform 0.5s ease-in;
-}
+/* Media Query for Tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .sliding-door {
+    position: relative;
+    overflow: hidden;
+  }
 
-.left-panel {
-  opacity: 1;
-  transform: translateX(120%);
-}
+  .left-panel,
+  .right-panel {
+    opacity: 1;
+    transition: transform 0.5s ease-in;
+  }
 
-.right-panel {
-  opacity: 1;
-  transform: translateX(-120%);
-}
+  .left-panel {
+    opacity: 1;
+    transform: translateX(120%);
+  }
 
-.show-left {
-  transform: translateX(0);
-}
+  .right-panel {
+    opacity: 1;
+    transform: translateX(-120%);
+  }
 
-.show-right {
-  transform: translateX(0);
+  .show-left {
+    transform: translateX(0);
+  }
+
+  .show-right {
+    transform: translateX(0);
+  }
 }
 
 .fade-in-down {
@@ -2379,7 +2434,7 @@ ul.blogsocico li.youtube a:hover, #sidebar ul.blogsocico li.youtube a:hover {
   top: 0;
   z-index: 15;
   width: 100%;
-  background-color: #0986a1;
+  background-color: #E86A33;
 }
 /* default css end */
 
@@ -2415,14 +2470,15 @@ a.site-logo {
   top: 4px;
 }
 .site-navbar ul li a {
-  color: black;
-  padding-left: 20px;
+  color: white;
+  text-align: center;
   display: block;
   text-decoration: none;
   text-transform: uppercase;
 }
 .site-navbar ul li a:hover {
-  background: blue;
+  background: yellow;
+  color: black;
 }
 /* navbar regular css end */
 
@@ -2645,7 +2701,9 @@ a.site-logo {
   display: block;
   cursor: pointer;
   text-align-last: center;
-  margin: 4rem auto;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card-ev img {
@@ -2691,7 +2749,7 @@ a.site-logo {
   transform: scale(0.8, 0.8) !important;
   -ms-transform: scale(0.8, 0.8) !important;
   -webkit-transform: scale(0.8, 0.8) !important;
-  transition: all 2s !important;
+  transition: all 0.5s !important;
   box-shadow: 0px 0px 12px 6px #80808094;
 }
 
@@ -2728,12 +2786,10 @@ a.site-logo {
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
+  margin-top: 30px;
 }
 
 .popup-content-ev {
-  background-color: #fefefe;
-  margin: auto;
- .popup-content-ev {
   background-color: #fefefe;
   margin: auto;
   padding: 0 20px 20px;
@@ -2803,3 +2859,6 @@ a.site-logo {
     padding: 0;
   }
 }
+
+
+
