--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font-family: 'Mukta', sans-serif;
   vertical-align: baseline;
 }
 
@@ -844,10 +844,29 @@ a.vale {
   margin-right: auto;
   margin-left: auto;
   margin-top: 25px;
-  border: 1px solid rgba(0,0,0,0.3);
+  border: 2px solid rgba(0,0,0,0.3);
+  border-radius: 25px;
   display: block;
-  width: 50%;
+  width: 20%;
   text-transform: uppercase;
+  
+}
+
+@media (max-width:750px) {
+  a.vale {
+    color: #021638;
+    line-height: 27px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 15px;
+    border: 2px solid rgba(0,0,0,0.3);
+    border-radius: 25px;
+    display: block;
+    width: 40%;
+    text-transform: uppercase;
+    
+  }
 }
 
 a.vale:hover {
@@ -2928,3 +2947,172 @@ a.site-logo {
 .close-ev{
   font-size: 250%;
 }
+
+.hero-z {
+  height: auto;
+  background: url("../sankalpimg/fbkg.jpeg");
+  background-color: rgba(0, 0, 0, 0.747);
+  background-size: cover;
+  background-blend-mode: multiply;
+   /* background-attachment:fixed ;
+    activate when you put in your website (optional)
+  */
+  color: rgb(255, 255, 255);
+  padding: 30px 80px 30px 30px;
+}
+.hero-z .container-z{
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex: 1;
+}
+.flex-z{
+  display: flex;
+}
+.container__about-z{
+  margin-bottom: 30px;
+}
+
+.container__about-z p{
+  margin-top: 10px;
+  max-width: 400px;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+}
+
+.container-pages-z{
+  column-gap: 30px;
+}
+
+.container-pages-z ul{
+  padding-top: 10px;
+  list-style: none;
+  line-height: 24px;
+}
+.container-pages-z ul a{
+  color: inherit;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+}
+.container-pages-z ul a:hover{
+  color: #017143;
+}
+footer .by-z{
+margin-top: 30px;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+footer .by p{
+  color: rgba(255, 255, 255, 0.605);
+  font-size: 14px;
+}
+.line__separete-z{
+  margin-top: 30px;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  z-index: 999;
+}
+.icons-z {
+  margin-top: 20px;
+  display: flex;
+  column-gap: 25px;
+  
+}
+
+.icon1 {
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
+  border-radius: 50%;
+  outline: 2px solid #fff;
+  transition-property:
+      outline-offset, outline-color,
+      background-color;
+  transition-duration: .25s;
+}
+
+.icon1:hover {
+  outline-offset: 4px;
+}
+
+.icon1:hover i {
+  animation: shake .25s;
+}
+
+.icon--instagram:hover {
+  background-image: radial-gradient(circle at 30% 107%,
+          #fdf497 0%, #fdf497 5%,
+          #fd5949 45%, #d6249f 60%,
+          #285AEB 90%);
+  outline-color: #a02d76;
+}
+
+.icon--twitter:hover {
+  background-color: #1da1f2;
+  outline-color: #1da1f2;
+}
+
+.icon--linkedin:hover {
+  background-color: #0077b5;
+  outline-color: #0077b5;
+}
+
+.icon--github:hover {
+  background-color: #000000;
+  outline-color: #000000;
+}
+
+@keyframes shake {
+  10% {
+      transform: rotate(15deg);
+  }
+
+  20% {
+      transform: rotate(-15deg);
+  }
+
+  30% {
+      transform: rotate(15deg);
+  }
+
+  40% {
+      transform: rotate(-15deg);
+  }
+}
+@media  (min-width: 500px){
+  .container__recentpages-z
+  {
+    margin-right: 50%;
+    margin-left: -50%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .hero-z{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container__about-z h2{
+    font-size: 20px;
+  }
+  .container__about-z p{
+    font-size: 12px;
+  }
+  .container__recentpages-z h2{
+    font-size: 20px;
+  }
+  .container-pages-z ul a{
+    font-size: 12px;
+  }
+  footer .by-z p{
+    font-size: 12px;
+  }
+} 
