--- a/css/style.css
+++ b/css/style.css
@@ -2704,7 +2704,7 @@ a.site-logo {
           bottom: 5%;
           text-align: center;
           font-family: 'Dancing Script', cursive;
-          font-size: xx-large;
+          font-size: x-large;
           line-height: 100%;
         }
         #text-car2 {
