--- a/css/social.css
+++ b/css/social.css
@@ -64,14 +64,14 @@ h3.centered {
   margin-bottom: 50px;
   padding-top: 40px;
   padding-bottom: 70px;
-  -webkit-transition: all 0.4s 0s,
-border 0.4s 0.6s,
-height 0.4s 0.4s,
-margin 0.4s 0.4s;
-  transition: all 0.4s 0s,
-border 0.4s 0.6s,
-height 0.4s 0.4s,
-margin 0.4s 0.4s;
+  -webkit-transition: all ,
+border ,
+height ,
+margin ;
+  transition: all ,
+border ,
+height ,
+margin ;
 }
 
 .box-fix:hover .social {
